samples/_failures_safe/1761168688_570c3f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5832d8fb.c: In function ‘main’:
./samples/SAFE/__tmp_5832d8fb.c:151:27: error: expected ‘)’ at end of input
  151 |     process_text(&analyzer
      |                 ~         ^
      |                           )
./samples/SAFE/__tmp_5832d8fb.c:151:5: error: too few arguments to function ‘process_text’
  151 |     process_text(&analyzer
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_5832d8fb.c:65:6: note: declared here
   65 | void process_text(struct TextAnalyzer *analyzer, const char *text) {
      |      ^~~~~~~~~~~~
./samples/SAFE/__tmp_5832d8fb.c:151:5: error: expected declaration or statement at end of input
  151 |     process_text(&analyzer
      |     ^~~~~~~~~~~~
